--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,11 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^8.2"
+    },
+    "require-dev": {
+        "laravel/pint": "^1.11"
+    },
+    "scripts": {
+        "format": "pint"
     }
 }
