--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,16 @@
     "php": "^8.2"
   },
   "require-dev": {
-    "laravel/pint": "^1.11"
+    "laravel/pint": "^1.11",
+    "pestphp/pest": "^2.16"
   },
   "scripts": {
-    "format": "pint"
+    "format": "pint",
+    "test": "pest"
+  },
+  "config": {
+    "allow-plugins": {
+      "pestphp/pest-plugin": true
+    }
   }
 }
