--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
       "email": "simonorono@protonmail.com"
     }
   ],
+  "bin": "devlog.php",
   "minimum-stability": "stable",
   "require": {
     "php": "^8.2",
@@ -22,9 +23,11 @@
   },
   "require-dev": {
     "laravel/pint": "^1.11",
-    "pestphp/pest": "^2.16"
+    "pestphp/pest": "^2.16",
+    "humbug/box": "^4.3"
   },
   "scripts": {
+    "build": "box compile",
     "format": "pint",
     "test": "pest"
   },
