Implement data classes for log entries
* Added nesbot/carbon dependency
* Added menu entry to input meetings
* Format devlog.php

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
   "minimum-stability": "stable",
   "require": {
     "php": "^8.2",
-    "php-school/cli-menu": "^4.3"
+    "php-school/cli-menu": "^4.3",
+    "nesbot/carbon": "^2.69"
   },
   "require-dev": {
     "laravel/pint": "^1.11",
