Lock commit as version for php-school/cli-menu
That project is behind on releases and development, so I'm using a
specific commit for getting all new features, specifically, allowing to
send any callable to `addSubMenu` in CliMenuBuilder.

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   "minimum-stability": "stable",
   "require": {
     "php": "^8.2",
-    "php-school/cli-menu": "^4.3",
+    "php-school/cli-menu": "dev-master#835c28ef599f237eeb0a8920c1a6a471cedc139a",
     "nesbot/carbon": "^2.69"
   },
   "require-dev": {
